--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,30 +32,38 @@
                     <Button
                         android:text="0"
                         android:layout_width="0dp"
-                        android:layout_weight="1"                        android:layout_height="fill_parent"
+                        android:layout_weight="1"
+                        android:layout_height="fill_parent"
                         android:id="@+id/button0"
-                        android:background="@drawable/button_border_user"/>                        />
+                        android:background="@drawable/button_border_user"
+                        android:onClick="gridEdit"/>
 
                     <Button
                         android:text="1"
                         android:layout_width="0dp"
-                        android:layout_weight="1"                        android:layout_height="fill_parent"
+                        android:layout_weight="1"
+                        android:layout_height="fill_parent"
                         android:id="@+id/button1"
-                        android:background="@drawable/button_border_user"/>                        />
+                        android:background="@drawable/button_border_user"
+                        android:onClick="gridEdit"/>
 
                     <Button
                         android:text="2"
                         android:layout_width="0dp"
-                        android:layout_weight="1"                        android:layout_height="fill_parent"
+                        android:layout_weight="1"
+                        android:layout_height="fill_parent"
                         android:id="@+id/button2"
-                        android:background="@drawable/button_border_user"/>                        />
+                        android:background="@drawable/button_border_user"
+                        android:onClick="gridEdit"/>
 
                     <Button
                         android:text="3"
                         android:layout_width="0dp"
-                        android:layout_weight="1"                        android:layout_height="fill_parent"
+                        android:layout_weight="1"
+                        android:layout_height="fill_parent"
                         android:id="@+id/button3"
-                        android:background="@drawable/button_border_user"/>                        />
+                        android:background="@drawable/button_border_user"
+                        android:onClick="gridEdit"/>                        />
 
                     </LinearLayout>
 
@@ -70,30 +78,38 @@
                     <Button
                         android:text="4"
                         android:layout_width="0dp"
-                        android:layout_weight="1"                        android:layout_height="fill_parent"
+                        android:layout_weight="1"
+                        android:layout_height="fill_parent"
                         android:id="@+id/button4"
-                        android:background="@drawable/button_border_user"/>                        />
+                        android:background="@drawable/button_border_user"
+                        android:onClick="gridEdit"/>
 
                     <Button
                         android:text="5"
                         android:layout_width="0dp"
-                        android:layout_weight="1"                        android:layout_height="fill_parent"
+                        android:layout_weight="1"
+                        android:layout_height="fill_parent"
                         android:id="@+id/button5"
-                        android:background="@drawable/button_border_user"/>                        />
+                        android:background="@drawable/button_border_user"
+                        android:onClick="gridEdit"/>
 
                     <Button
                         android:text="6"
                         android:layout_width="0dp"
-                        android:layout_weight="1"                        android:layout_height="fill_parent"
+                        android:layout_weight="1"
+                        android:layout_height="fill_parent"
                         android:id="@+id/button6"
-                        android:background="@drawable/button_border_user"/>                        />
+                        android:background="@drawable/button_border_user"
+                        android:onClick="gridEdit"/>
 
                     <Button
                         android:text="7"
                         android:layout_width="0dp"
-                        android:layout_weight="1"                        android:layout_height="fill_parent"
+                        android:layout_weight="1"
+                        android:layout_height="fill_parent"
                         android:id="@+id/button7"
-                        android:background="@drawable/button_border_user"/>                        />
+                        android:background="@drawable/button_border_user"
+                        android:onClick="gridEdit"/>
 
                 </LinearLayout>
 
@@ -108,30 +124,38 @@
                     <Button
                         android:text="8"
                         android:layout_width="0dp"
-                        android:layout_weight="1"                        android:layout_height="fill_parent"
+                        android:layout_weight="1"
+                        android:layout_height="fill_parent"
                         android:id="@+id/button8"
-                        android:background="@drawable/button_border_user"/>                        />
+                        android:background="@drawable/button_border_user"
+                        android:onClick="gridEdit"/>
 
                     <Button
                         android:text="9"
                         android:layout_width="0dp"
-                        android:layout_weight="1"                        android:layout_height="fill_parent"
+                        android:layout_weight="1"
+                        android:layout_height="fill_parent"
                         android:id="@+id/button9"
-                        android:background="@drawable/button_border_user"/>                        />
+                        android:background="@drawable/button_border_user"
+                        android:onClick="gridEdit"/>
 
                     <Button
                         android:text="10"
                         android:layout_width="0dp"
-                        android:layout_weight="1"                        android:layout_height="fill_parent"
+                        android:layout_weight="1"
+                        android:layout_height="fill_parent"
                         android:id="@+id/button10"
-                        android:background="@drawable/button_border_user"/>                        />
+                        android:background="@drawable/button_border_user"
+                        android:onClick="gridEdit"/>
 
                     <Button
                         android:text="11"
                         android:layout_width="0dp"
-                        android:layout_weight="1"                        android:layout_height="fill_parent"
+                        android:layout_weight="1"
+                        android:layout_height="fill_parent"
                         android:id="@+id/button11"
-                        android:background="@drawable/button_border_user"/>                        />
+                        android:background="@drawable/button_border_user"
+                        android:onClick="gridEdit"/>
 
                 </LinearLayout>
 
@@ -149,28 +173,35 @@
                         android:layout_weight="1"
                         android:layout_height="fill_parent"
                         android:id="@+id/button12"
-                        android:background="@drawable/button_border_user"/>                        />
+                        android:background="@drawable/button_border_user"
+                        android:onClick="gridEdit"/>
 
                     <Button
                         android:text="13"
                         android:layout_width="0dp"
-                        android:layout_weight="1"                        android:layout_height="fill_parent"
+                        android:layout_weight="1"
+                        android:layout_height="fill_parent"
                         android:id="@+id/button13"
-                        android:background="@drawable/button_border_user"/>                        />
+                        android:background="@drawable/button_border_user"
+                        android:onClick="gridEdit"/>
 
                     <Button
                         android:text="14"
                         android:layout_width="0dp"
-                        android:layout_weight="1"                        android:layout_height="fill_parent"
+                        android:layout_weight="1"
+                        android:layout_height="fill_parent"
                         android:id="@+id/button14"
-                        android:background="@drawable/button_border_user"/>                        />
+                        android:background="@drawable/button_border_user"
+                        android:onClick="gridEdit"/>
 
                     <Button
                         android:text="15"
                         android:layout_width="0dp"
-                        android:layout_weight="1"                        android:layout_height="fill_parent"
+                        android:layout_weight="1"
+                        android:layout_height="fill_parent"
                         android:id="@+id/button15"
-                        android:background="@drawable/button_border_user"/>                        />
+                        android:background="@drawable/button_border_user"
+                        android:onClick="gridEdit"/>
 
                 </LinearLayout>
 
@@ -182,6 +213,7 @@
 
                     <!--Restart and Auto Buttons horizontal orientation-->
 
+
                     <Button
                         android:text="Restart"
                         android:layout_width="wrap_content"
@@ -189,6 +221,17 @@
                         android:id="@+id/button17"
                         android:layout_weight="1"
                         android:onClick="restartButton"/>
+
+                    <ToggleButton
+                        android:text="Edit"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/toggleButton4"
+                        android:layout_weight="1"
+                        android:onClick="editButton"
+                        android:textOn="Edit: On"
+                        android:textOff="Edit: Off"
+                        android:textColorLink="@android:color/holo_blue_light" />
 
                     <Button
                         android:text="Auto"
