--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -191,6 +191,14 @@
                         android:onClick="restartButton"/>
 
                     <Button
+                        android:text="Reset"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/resetButton"
+                        android:layout_weight="1"
+                        android:onClick="resetButton"/>
+
+                    <Button
                         android:text="Auto"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
